fix: changing z-indexes for clouds to display properly 😁

--- a/app/weather.css
+++ b/app/weather.css
@@ -2,7 +2,7 @@
     /* min-width: 100%; */
     min-height: 100vh;
     background-image: linear-gradient(#232f46, #49365f, #985E6D);
-    z-index: 1;
+    z-index: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,7 +15,11 @@
 	position: fixed;
 	right: 0;
 	top: 0;
-	z-index: -1;
+	z-index: 0;
+}
+
+.wetha {
+	z-index: 2;
 }
 
 /* KEYFRAMES */
